// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout page when there is payment token should render cancelled component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Finished
    </p>
  </div>
  <div
    className="css-1mi3tt8"
  >
    <h2
      className="css-84al3w"
    >
      Payment Cancelled
    </h2>
    <p
      className="css-441ftm"
    >
      Successfuly cancelled intent:
       
      <span
        className="css-4i139l"
        data-testid="cancelled-details"
      >
        id
      </span>
    </p>
  </div>
</div>
`;

exports[`Checkout page when there is payment token should render confirm component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={Object {}}
    >
      Finished
    </p>
  </div>
  <div
    aria-hidden={false}
    className="css-1mi3tt8"
  >
    <h2
      className="css-ijdyq2"
      data-testid="confirm-intent-name"
    >
      Hello, 
      name
      !
    </h2>
    <p
      className="css-tmw1y6"
    >
      Please review your payment details and confirm order
    </p>
    <div
      className="css-r96hqv"
    >
      <p
        className="css-18poma1"
      >
        INTENT ID
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-id"
      >
        id
      </p>
      <p
        className="css-18poma1"
      >
        EMAIL
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-email"
      />
      <p
        className="css-18poma1"
      >
        PHONE
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-phone"
      />
      <p
        className="css-18poma1"
      >
        ADDRESS
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-address"
      />
    </div>
    <section
      className="css-8atqhb"
    >
      <ul
        className="css-0"
        role="list"
      >
        <li
          className="css-tic8xi"
          role="listitem"
        >
          <img
            alt="name"
            className="css-rhemcv"
          />
          <div
            className="css-1z0sfv6"
          >
            <strong
              className="css-18poma1"
            >
              name
            </strong>
            <em
              className="css-183x3ib"
            >
              color
            </em>
          </div>
          <p
            className="css-15x91gx"
          />
          <strong
            className="css-nwzge5"
          >
            10.00
             $
          </strong>
        </li>
      </ul>
      <footer
        className="css-0"
      >
        <p
          className="css-ohvq3n"
        >
          TOTAL PRICE
        </p>
        <strong
          className="css-lk14dv"
        >
           $
        </strong>
      </footer>
    </section>
    <Elements
      stripe="stripe"
    >
      <div
        className="css-1mi3tt8"
      >
        <label
          className="css-8qu6k5"
          htmlFor="StripeElement"
        >
          enter your card details to finish payment
        </label>
        <div
          className="css-1dahfv9"
        >
          <CardElement
            data-testid="confirm-card-element"
            onChange={[Function]}
            options={
              Object {
                "iconStyle": "solid",
                "style": Object {
                  "base": Object {
                    ":-webkit-autofill": Object {
                      "color": "#D6BCFA",
                    },
                    "::placeholder": Object {
                      "color": "#D6BCFA",
                    },
                    "color": "#FAF5FF",
                    "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                    "fontSize": "16px",
                    "fontSmoothing": "antialiased",
                    "fontWeight": 500,
                    "iconColor": "#FAF5FF",
                  },
                  "invalid": Object {
                    "color": "#C53030",
                    "iconColor": "#C53030",
                  },
                },
              }
            }
          />
        </div>
        <p
          className="css-165naot"
        >
          Use any future date and CVC with 
          <strong>
            4242 4242 4242 4242
          </strong>
           
          number for testing
        </p>
      </div>
    </Elements>
    <div
      className="css-qv6zkf"
    >
      <button
        className="css-15ecn8p"
        data-cy="button"
        data-testid="confirm-controls-cancel"
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        CANCEL ORDER
      </button>
      <button
        className="css-187kagv"
        data-cy="button"
        data-testid="confirm-controls-confirm"
        disabled={true}
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        CONFIRM ORDER
      </button>
    </div>
  </div>
</div>
`;

exports[`Checkout page when there is payment token should render error component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Finished
    </p>
  </div>
  <div
    className="css-1mi3tt8"
  >
    <p
      className="css-1po2p9s"
    >
      <strong>
        Error:
      </strong>
      <br />
      <em
        data-testid="error-message"
      >
        message
      </em>
    </p>
    <button
      className="css-187kagv"
      data-cy="button"
      data-testid="error-button-retry"
      href="#void"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      retry
    </button>
  </div>
</div>
`;

exports[`Checkout page when there is payment token should render form component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={Object {}}
    >
      Finished
    </p>
  </div>
  <form
    className="css-8o331q"
  >
    <fieldset
      className="css-94sf3x"
    >
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="name"
        >
          name
        </label>
        <input
          className="css-cth1sm"
          id="name"
          onChange={[Function]}
          placeholder="John Doe"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="address"
        >
          address
        </label>
        <input
          className="css-cth1sm"
          id="address"
          onChange={[Function]}
          placeholder="J191 S. Illinois Street, Everett, MA 02149"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="email"
        >
          email
        </label>
        <input
          className="css-cth1sm"
          id="email"
          onChange={[Function]}
          placeholder="johndoe@example.com"
          required={true}
          type="email"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="phone"
        >
          phone
        </label>
        <input
          className="css-cth1sm"
          id="phone"
          onChange={[Function]}
          placeholder="(941) 555-0123"
          required={true}
          type="tel"
          value=""
        />
      </fieldset>
    </fieldset>
    <p
      className="css-1yab5hb"
    >
      By proceeding you accept the
       
      <a
        className="css-1c5zfe9"
      >
        Terms of Service
      </a>
       
      of the company.
    </p>
    <div
      className="css-1rsrz83"
    >
      <button
        className="css-1h13z07"
        data-cy="button"
        data-testid="form-review-button"
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        type="button"
      >
        BACK TO REVIEW
      </button>
      <button
        className="css-187kagv"
        data-cy="button"
        data-testid="form-submit-button"
        disabled={true}
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        FILL THE FORM
      </button>
    </div>
  </form>
</div>
`;

exports[`Checkout page when there is payment token should render review component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={Object {}}
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={Object {}}
    >
      Finished
    </p>
  </div>
  <div
    className="css-dvxtzn"
  >
    <section
      className="css-8atqhb"
    >
      <ul
        className="css-0"
        role="list"
      >
        <li
          className="css-tic8xi"
          role="listitem"
        >
          <img
            alt="name"
            className="css-rhemcv"
          />
          <div
            className="css-1z0sfv6"
          >
            <strong
              className="css-18poma1"
            >
              name
            </strong>
            <em
              className="css-183x3ib"
            >
              color
            </em>
          </div>
          <p
            className="css-15x91gx"
          />
          <strong
            className="css-nwzge5"
          >
            10.00
             $
          </strong>
          <div
            aria-label="Delete"
            className="css-c4ibz5"
            data-cy="button"
            href="#void"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </div>
        </li>
      </ul>
      <footer
        className="css-0"
      >
        <p
          className="css-ohvq3n"
        >
          TOTAL PRICE
        </p>
        <strong
          className="css-lk14dv"
        >
           $
        </strong>
      </footer>
    </section>
    <div
      className="css-1hojse"
    >
      <button
        className="css-1h13z07"
        data-cy="button"
        data-testid="review-button-back"
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        BACK TO SHOPPING
      </button>
      <button
        className="css-187kagv"
        data-cy="button"
        data-testid="review-button-form"
        href="#void"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        PAYMENT DETAILS
      </button>
    </div>
  </div>
</div>
`;

exports[`Checkout page when there is payment token should render success component 1`] = `
<div
  className="css-w6sf3q"
>
  <div
    className="css-1sj67m5"
  >
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Review
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Payment Details
    </p>
    <svg
      className="css-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
      />
    </svg>
    <p
      className="css-18poma1"
      style={
        Object {
          "color": "#44337A",
          "fontWeight": "bold",
        }
      }
    >
      Finished
    </p>
  </div>
  <div
    className="css-1mi3tt8"
  >
    <h2
      className="css-84al3w"
    >
      Payment Successful
    </h2>
    <p
      className="css-441ftm"
    >
      Received intent number:
       
      <span
        className="css-4i139l"
        data-testid="success-content"
      >
        id
      </span>
    </p>
    <p
      className="css-18poma1"
    >
      This was a sample transaction to demonstrate the payment flow. Thank you!
    </p>
  </div>
</div>
`;
